2010-01-02
	* bugfix of saveFUN4FileAttr() and ShowFileProperty().
	* Improve QueryFile() and its Rd file.
	* Bugfix of file category memo button and add tooltips.
	* setting about code mark color is no longer needed.
	
2009-12-29
	* Bugfix of saveFUN4FileAttr(). Thanks Julien Biaudet for bug
	report.
	* relation() return the index when Relation is exact.
	* Add new file of Boolean to implement boolean search and a new
	function of and().
	* change default color scheme for code mark again, 11-color scheme
	from http://colorbrewer2.org/.
	
2009-12-28
	* Rename Query to QueryFile.
	
2009-11-22
	* change default color scheme for code mark.

2009-11-08
	* fix a minor bug in SummaryCoding (Thanks Julien Biaudet)
	
2009-10-16
	* add argument to markRange and InsertAnchor to allow user-provided color.
	* markCodeFun/ViewFileFun use code-specific color to highlight the code-mark.
	* update project database structure.
	* pop-up menu for specify color for a code.

2009-10-13
	* fix bug in saveFUN4CaseAttr().

2009-10-06
	* proto of setColor function.

2009-10-04
	* fix a bug in "search files" menu.

2009-09-14 (version 0.1-8)
	* document all the exported function, ready for CRAN.

2009-08-01
	* Add "Close all codings" button.

2009-07-28
	*  clean "file of case" widget when project is closed.

2009-07-09
	*  "show case with memo only", correct some mismatch in Rd files.

2009-06-17
	* AddToFileCategory() can add multiple files to multiple categories at one time.

2009-06-17
	* RGtk2 (>=2.12.8), thanks Gaua for feedback.

2009-06-12
	* Improve ShowFileProperty function.
	* Fix bug of "Add Anno" button.
	* Fix bug of countAnchorsWithFileName()
	* New function of Query.

2009-06-11
	* "Show last coded file" in popup menu of Files Tab.
	* Revision of "Find a word" menu according to new method of
	highlighting coding.
	
2009-06-10
	* change GetFileId() according change of 2009-06-05.
	
2009-06-06
	* use font from "font setting" to set font of journal widget.

2009-06-05